tekton/cd/dashboard/overlays/oci-ci-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: 'tekton.infra.tekton.dev'
    dns.gardener.cloud/ttl: "3600"
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  tls:
  - secretName: tekton-infra-tekton-dev-tls
    hosts:
    - tekton.infra.tekton.dev
  rules:
  - host: tekton.infra.tekton.dev
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        path: /
        pathType: Prefix
